proc-macros/tests/ui/incorrect/sub/sub_empty_attr.stderr
error: Missing argument `name`
 --> $DIR/sub_empty_attr.rs:6:4
  |
6 |     #[subscription()]
  |       ^^^^^^^^^^^^
